fix horizontal scroll issue

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -17,11 +17,3 @@
     height: 24px;
   }
 }
-
-@media screen and (max-width: 800px) {
-  .header {
-    padding-left: 20px;
-    padding-right: 20px;
-    box-sizing: border-box;
-  }
-}
