--- a/blocks/page.css
+++ b/blocks/page.css
@@ -39,4 +39,10 @@
     max-width: 768px;
     width: 100%;
   }
+
+  .page__section {
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+  }
 }
